--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.NewsListActivity"></activity>
+        <activity android:name=".activity.NewsListActivity" />
+        <activity android:name=".activity.MovieDetailActivity"/>
+        <activity android:name=".activity.PersonCenterActivity"/>
     </application>
 
 </manifest>
